[package]
name = "h264_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
log4rs = { version = "1.1.1", optional = true }
openh264 = "0.2.15"

[dev-dependencies]
env_logger = "0.9"

[lib]
crate-type = ["staticlib"]  #静态库

#非常重要：必须要对panic进行标注，否则会出现问题
[profile.release]
panic="abort"  

#非常重要：必须要对panic进行标注，否则会出现问题
[profile.dev]
panic="abort"